generated/projectExprParser.cpp

// Generated from projectExpr.g4 by ANTLR 4.8


#include "projectExprListener.h"
#include "projectExprVisitor.h"

#include "projectExprParser.h"


using namespace antlrcpp;
using namespace antlr4;

projectExprParser::projectExprParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

projectExprParser::~projectExprParser() {
  delete _interpreter;
}

std::string projectExprParser::getGrammarFileName() const {
  return "projectExpr.g4";
}

const std::vector<std::string>& projectExprParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& projectExprParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

projectExprParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::PBeginContext* projectExprParser::ProgContext::pBegin() {
  return getRuleContext<projectExprParser::PBeginContext>(0);
}


size_t projectExprParser::ProgContext::getRuleIndex() const {
  return projectExprParser::RuleProg;
}

void projectExprParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void projectExprParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}


antlrcpp::Any projectExprParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::ProgContext* projectExprParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, projectExprParser::RuleProg);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    pBegin();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PBeginContext ------------------------------------------------------------------

projectExprParser::PBeginContext::PBeginContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::StmtContext* projectExprParser::PBeginContext::stmt() {
  return getRuleContext<projectExprParser::StmtContext>(0);
}

projectExprParser::PBeginRContext* projectExprParser::PBeginContext::pBeginR() {
  return getRuleContext<projectExprParser::PBeginRContext>(0);
}


size_t projectExprParser::PBeginContext::getRuleIndex() const {
  return projectExprParser::RulePBegin;
}

void projectExprParser::PBeginContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPBegin(this);
}

void projectExprParser::PBeginContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPBegin(this);
}


antlrcpp::Any projectExprParser::PBeginContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitPBegin(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::PBeginContext* projectExprParser::pBegin() {
  PBeginContext *_localctx = _tracker.createInstance<PBeginContext>(_ctx, getState());
  enterRule(_localctx, 2, projectExprParser::RulePBegin);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    stmt();
    setState(43);
    pBeginR();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PBeginRContext ------------------------------------------------------------------

projectExprParser::PBeginRContext::PBeginRContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::StmtContext* projectExprParser::PBeginRContext::stmt() {
  return getRuleContext<projectExprParser::StmtContext>(0);
}

projectExprParser::PBeginRContext* projectExprParser::PBeginRContext::pBeginR() {
  return getRuleContext<projectExprParser::PBeginRContext>(0);
}


size_t projectExprParser::PBeginRContext::getRuleIndex() const {
  return projectExprParser::RulePBeginR;
}

void projectExprParser::PBeginRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPBeginR(this);
}

void projectExprParser::PBeginRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPBeginR(this);
}


antlrcpp::Any projectExprParser::PBeginRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitPBeginR(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::PBeginRContext* projectExprParser::pBeginR() {
  PBeginRContext *_localctx = _tracker.createInstance<PBeginRContext>(_ctx, getState());
  enterRule(_localctx, 4, projectExprParser::RulePBeginR);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(49);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case projectExprParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(45);
        stmt();
        setState(46);
        pBeginR();
        break;
      }

      case projectExprParser::EOF: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

projectExprParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::LhsContext* projectExprParser::StmtContext::lhs() {
  return getRuleContext<projectExprParser::LhsContext>(0);
}

projectExprParser::RhsEContext* projectExprParser::StmtContext::rhsE() {
  return getRuleContext<projectExprParser::RhsEContext>(0);
}


size_t projectExprParser::StmtContext::getRuleIndex() const {
  return projectExprParser::RuleStmt;
}

void projectExprParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void projectExprParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}


antlrcpp::Any projectExprParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::StmtContext* projectExprParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 6, projectExprParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    lhs();
    setState(52);
    match(projectExprParser::T__0);
    setState(53);
    rhsE();
    setState(54);
    match(projectExprParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LhsContext ------------------------------------------------------------------

projectExprParser::LhsContext::LhsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::TRefContext* projectExprParser::LhsContext::tRef() {
  return getRuleContext<projectExprParser::TRefContext>(0);
}


size_t projectExprParser::LhsContext::getRuleIndex() const {
  return projectExprParser::RuleLhs;
}

void projectExprParser::LhsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLhs(this);
}

void projectExprParser::LhsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLhs(this);
}


antlrcpp::Any projectExprParser::LhsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitLhs(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::LhsContext* projectExprParser::lhs() {
  LhsContext *_localctx = _tracker.createInstance<LhsContext>(_ctx, getState());
  enterRule(_localctx, 8, projectExprParser::RuleLhs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    tRef();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RhsEContext ------------------------------------------------------------------

projectExprParser::RhsEContext::RhsEContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::RhsIContext* projectExprParser::RhsEContext::rhsI() {
  return getRuleContext<projectExprParser::RhsIContext>(0);
}

projectExprParser::RhsERContext* projectExprParser::RhsEContext::rhsER() {
  return getRuleContext<projectExprParser::RhsERContext>(0);
}


size_t projectExprParser::RhsEContext::getRuleIndex() const {
  return projectExprParser::RuleRhsE;
}

void projectExprParser::RhsEContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRhsE(this);
}

void projectExprParser::RhsEContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRhsE(this);
}


antlrcpp::Any projectExprParser::RhsEContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitRhsE(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::RhsEContext* projectExprParser::rhsE() {
  RhsEContext *_localctx = _tracker.createInstance<RhsEContext>(_ctx, getState());
  enterRule(_localctx, 10, projectExprParser::RuleRhsE);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    rhsI();
    setState(59);
    rhsER();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RhsERContext ------------------------------------------------------------------

projectExprParser::RhsERContext::RhsERContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::RhsEContext* projectExprParser::RhsERContext::rhsE() {
  return getRuleContext<projectExprParser::RhsEContext>(0);
}


size_t projectExprParser::RhsERContext::getRuleIndex() const {
  return projectExprParser::RuleRhsER;
}

void projectExprParser::RhsERContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRhsER(this);
}

void projectExprParser::RhsERContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRhsER(this);
}


antlrcpp::Any projectExprParser::RhsERContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitRhsER(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::RhsERContext* projectExprParser::rhsER() {
  RhsERContext *_localctx = _tracker.createInstance<RhsERContext>(_ctx, getState());
  enterRule(_localctx, 12, projectExprParser::RuleRhsER);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case projectExprParser::T__2: {
        enterOuterAlt(_localctx, 1);
        setState(61);
        match(projectExprParser::T__2);
        setState(62);
        rhsE();
        break;
      }

      case projectExprParser::T__3: {
        enterOuterAlt(_localctx, 2);
        setState(63);
        match(projectExprParser::T__3);
        setState(64);
        rhsE();
        break;
      }

      case projectExprParser::T__1:
      case projectExprParser::T__5: {
        enterOuterAlt(_localctx, 3);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RhsIContext ------------------------------------------------------------------

projectExprParser::RhsIContext::RhsIContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::RhsEContext* projectExprParser::RhsIContext::rhsE() {
  return getRuleContext<projectExprParser::RhsEContext>(0);
}

projectExprParser::RhsIRContext* projectExprParser::RhsIContext::rhsIR() {
  return getRuleContext<projectExprParser::RhsIRContext>(0);
}

projectExprParser::TRefContext* projectExprParser::RhsIContext::tRef() {
  return getRuleContext<projectExprParser::TRefContext>(0);
}

projectExprParser::SRefContext* projectExprParser::RhsIContext::sRef() {
  return getRuleContext<projectExprParser::SRefContext>(0);
}

projectExprParser::ConValContext* projectExprParser::RhsIContext::conVal() {
  return getRuleContext<projectExprParser::ConValContext>(0);
}


size_t projectExprParser::RhsIContext::getRuleIndex() const {
  return projectExprParser::RuleRhsI;
}

void projectExprParser::RhsIContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRhsI(this);
}

void projectExprParser::RhsIContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRhsI(this);
}


antlrcpp::Any projectExprParser::RhsIContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitRhsI(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::RhsIContext* projectExprParser::rhsI() {
  RhsIContext *_localctx = _tracker.createInstance<RhsIContext>(_ctx, getState());
  enterRule(_localctx, 14, projectExprParser::RuleRhsI);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(82);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(68);
      match(projectExprParser::T__4);
      setState(69);
      rhsE();
      setState(70);
      match(projectExprParser::T__5);
      setState(71);
      rhsIR();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(73);
      tRef();
      setState(74);
      rhsIR();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(76);
      sRef();
      setState(77);
      rhsIR();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(79);
      conVal();
      setState(80);
      rhsIR();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RhsIRContext ------------------------------------------------------------------

projectExprParser::RhsIRContext::RhsIRContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::RhsIContext* projectExprParser::RhsIRContext::rhsI() {
  return getRuleContext<projectExprParser::RhsIContext>(0);
}


size_t projectExprParser::RhsIRContext::getRuleIndex() const {
  return projectExprParser::RuleRhsIR;
}

void projectExprParser::RhsIRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRhsIR(this);
}

void projectExprParser::RhsIRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRhsIR(this);
}


antlrcpp::Any projectExprParser::RhsIRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitRhsIR(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::RhsIRContext* projectExprParser::rhsIR() {
  RhsIRContext *_localctx = _tracker.createInstance<RhsIRContext>(_ctx, getState());
  enterRule(_localctx, 16, projectExprParser::RuleRhsIR);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(93);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case projectExprParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(84);
        match(projectExprParser::T__6);
        setState(85);
        rhsI();
        break;
      }

      case projectExprParser::T__7: {
        enterOuterAlt(_localctx, 2);
        setState(86);
        match(projectExprParser::T__7);
        setState(87);
        rhsI();
        break;
      }

      case projectExprParser::T__8: {
        enterOuterAlt(_localctx, 3);
        setState(88);
        match(projectExprParser::T__8);
        setState(89);
        rhsI();
        break;
      }

      case projectExprParser::T__9: {
        enterOuterAlt(_localctx, 4);
        setState(90);
        match(projectExprParser::T__9);
        setState(91);
        rhsI();
        break;
      }

      case projectExprParser::T__1:
      case projectExprParser::T__2:
      case projectExprParser::T__3:
      case projectExprParser::T__5: {
        enterOuterAlt(_localctx, 5);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TRefContext ------------------------------------------------------------------

projectExprParser::TRefContext::TRefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* projectExprParser::TRefContext::ID() {
  return getToken(projectExprParser::ID, 0);
}

projectExprParser::CListContext* projectExprParser::TRefContext::cList() {
  return getRuleContext<projectExprParser::CListContext>(0);
}

projectExprParser::AListContext* projectExprParser::TRefContext::aList() {
  return getRuleContext<projectExprParser::AListContext>(0);
}


size_t projectExprParser::TRefContext::getRuleIndex() const {
  return projectExprParser::RuleTRef;
}

void projectExprParser::TRefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTRef(this);
}

void projectExprParser::TRefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTRef(this);
}


antlrcpp::Any projectExprParser::TRefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitTRef(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::TRefContext* projectExprParser::tRef() {
  TRefContext *_localctx = _tracker.createInstance<TRefContext>(_ctx, getState());
  enterRule(_localctx, 18, projectExprParser::RuleTRef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(projectExprParser::ID);
    setState(96);
    match(projectExprParser::T__10);
    setState(97);
    cList();
    setState(98);
    match(projectExprParser::T__11);
    setState(99);
    match(projectExprParser::T__12);
    setState(100);
    aList();
    setState(101);
    match(projectExprParser::T__13);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SRefContext ------------------------------------------------------------------

projectExprParser::SRefContext::SRefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* projectExprParser::SRefContext::ID() {
  return getToken(projectExprParser::ID, 0);
}

projectExprParser::CListContext* projectExprParser::SRefContext::cList() {
  return getRuleContext<projectExprParser::CListContext>(0);
}


size_t projectExprParser::SRefContext::getRuleIndex() const {
  return projectExprParser::RuleSRef;
}

void projectExprParser::SRefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSRef(this);
}

void projectExprParser::SRefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSRef(this);
}


antlrcpp::Any projectExprParser::SRefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitSRef(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::SRefContext* projectExprParser::sRef() {
  SRefContext *_localctx = _tracker.createInstance<SRefContext>(_ctx, getState());
  enterRule(_localctx, 20, projectExprParser::RuleSRef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(projectExprParser::ID);
    setState(104);
    match(projectExprParser::T__10);
    setState(105);
    cList();
    setState(106);
    match(projectExprParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CListContext ------------------------------------------------------------------

projectExprParser::CListContext::CListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* projectExprParser::CListContext::IntV() {
  return getToken(projectExprParser::IntV, 0);
}

projectExprParser::CListRContext* projectExprParser::CListContext::cListR() {
  return getRuleContext<projectExprParser::CListRContext>(0);
}


size_t projectExprParser::CListContext::getRuleIndex() const {
  return projectExprParser::RuleCList;
}

void projectExprParser::CListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCList(this);
}

void projectExprParser::CListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCList(this);
}


antlrcpp::Any projectExprParser::CListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitCList(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::CListContext* projectExprParser::cList() {
  CListContext *_localctx = _tracker.createInstance<CListContext>(_ctx, getState());
  enterRule(_localctx, 22, projectExprParser::RuleCList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(projectExprParser::IntV);
    setState(109);
    cListR();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CListRContext ------------------------------------------------------------------

projectExprParser::CListRContext::CListRContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* projectExprParser::CListRContext::IntV() {
  return getToken(projectExprParser::IntV, 0);
}

projectExprParser::CListRContext* projectExprParser::CListRContext::cListR() {
  return getRuleContext<projectExprParser::CListRContext>(0);
}


size_t projectExprParser::CListRContext::getRuleIndex() const {
  return projectExprParser::RuleCListR;
}

void projectExprParser::CListRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCListR(this);
}

void projectExprParser::CListRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCListR(this);
}


antlrcpp::Any projectExprParser::CListRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitCListR(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::CListRContext* projectExprParser::cListR() {
  CListRContext *_localctx = _tracker.createInstance<CListRContext>(_ctx, getState());
  enterRule(_localctx, 24, projectExprParser::RuleCListR);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case projectExprParser::T__14: {
        enterOuterAlt(_localctx, 1);
        setState(111);
        match(projectExprParser::T__14);
        setState(112);
        match(projectExprParser::IntV);
        setState(113);
        cListR();
        break;
      }

      case projectExprParser::T__11: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AListContext ------------------------------------------------------------------

projectExprParser::AListContext::AListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::IdExprEContext* projectExprParser::AListContext::idExprE() {
  return getRuleContext<projectExprParser::IdExprEContext>(0);
}

projectExprParser::AListRContext* projectExprParser::AListContext::aListR() {
  return getRuleContext<projectExprParser::AListRContext>(0);
}


size_t projectExprParser::AListContext::getRuleIndex() const {
  return projectExprParser::RuleAList;
}

void projectExprParser::AListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAList(this);
}

void projectExprParser::AListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAList(this);
}


antlrcpp::Any projectExprParser::AListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitAList(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::AListContext* projectExprParser::aList() {
  AListContext *_localctx = _tracker.createInstance<AListContext>(_ctx, getState());
  enterRule(_localctx, 26, projectExprParser::RuleAList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    idExprE();
    setState(118);
    aListR();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AListRContext ------------------------------------------------------------------

projectExprParser::AListRContext::AListRContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

projectExprParser::IdExprEContext* projectExprParser::AListRContext::idExprE() {
  return getRuleContext<projectExprParser::IdExprEContext>(0);
}

projectExprParser::AListRContext* projectExprParser::AListRContext::aListR() {
  return getRuleContext<projectExprParser::AListRContext>(0);
}


size_t projectExprParser::AListRContext::getRuleIndex() const {
  return projectExprParser::RuleAListR;
}

void projectExprParser::AListRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAListR(this);
}

void projectExprParser::AListRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<projectExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAListR(this);
}


antlrcpp::Any projectExprParser::AListRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<projectExprVisitor*>(visitor))
    return parserVisitor->visitAListR(this);
  else
    return visitor->visitChildren(this);
}

projectExprParser::AListRContext* projectExprParser::aListR() {
  AListRContext *_localctx = _tracker.createInstance<AListRContext>(_ctx, getState());
  enterRule(_localctx, 28, projectExprParser::RuleAListR);
